# sources-lib

./: .gitmodules  CMakeLists.txt  README.md  main.c  main.cpp
sources/: CMakeLists.txt  faraday_datatypes.h  sources.cpp  sources.h  sources_api.cpp  sources_api.h  sources_c_api.cpp  sources_c_api.h  sources_datatypes.h  sources_reader.cpp  sources_reader.h  utility.cpp  utility.h
sources/tests/: CMakeLists.txt  reading_test.cpp  test_data_source.h  test_source_api.cpp
